KSCM-1898 - Fixed the alignment issue with outcomes
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@68118 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/cm.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/cm.less
@@ -490,4 +490,8 @@
   border-bottom: 1px dotted gray;
 }
 
+#course_review_outcome_details .uif-gridLayout td {
+  padding-top: 5px;
+}
+
 /* End */
